# pdf_learn_ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PRE-COMMIT-SETUP.md  README.md  docker-compose.yml  format-all.sh  setup-hooks.sh  start.sh
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/routers/: ai.py  notes.py  pdf.py
backend/app/services/: database_service.py  ollama_service.py  pdf_service.py
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AIPanel.tsx  ChatInterface.tsx  NotesPanel.tsx  PDFViewer.tsx  ResizablePanels.tsx  SimpleResizablePanels.tsx  TabbedRightPanel.tsx
frontend/src/pages/: Library.tsx  Reader.tsx
frontend/src/services/: api.ts
frontend/src/styles/: katex-dark.css
frontend/src/types/: pdf.ts
